LU-8460 osc: chunk size should not bigger than RPC size

Client osc_extent chunk size needs to be smaller than the size of
one RPC size.

Improve the LASSERT() to an LASSERTF() that prints the related
parameters to help debug problem.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: If73b8f05052f96970f3e97015a4642152ace2a38